--- a/Pagis/Cubo.html
+++ b/Pagis/Cubo.html
@@ -1,10 +1,10 @@
 <html>
 <head lang="pt-br/en">
     <title>O Cubo</title>
-    <link rel="stylesheet" href="Css/Cubos.css">
-    <link rel="stylesheet" href="Css/scrollbarEfect.css">
-    <link rel="stylesheet" href="Css/geral.css">
-    <link rel="icon" type="image/png" href="images/LogoProject.png">
+    <link rel="stylesheet" href="../CssCubos.css">
+    <link rel="stylesheet" href="../CssscrollbarEfect.css">
+    <link rel="stylesheet" href="../../Cssgeral.css">
+    <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,16 +12,16 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 class="titul">O Cubo 3D</h1>
         </a>
         <button class="menu" id="btnMenu">☰</button>
     </header>
     <nav class="sidebar" id="sidebar">
         <ul>
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="sobre.html">sobre</a></li>
-            <li><a href="contato.html">contato</a></li>
+            <li><a href="../index.html">inicio</a></li>
+            <li><a href="Pagis/sobre.html">sobre</a></li>
+            <li><a href="Pagis/contato.html">contato</a></li>
         </ul>
     </nav>
 
@@ -39,7 +39,7 @@
 
     <footer>Todos os Direitos São Reservados -2025- Matheus Ricci</footer>
 
-    <script src="script/funciona.js"></script>
-    <script src="script/injs.js"></script>
+    <script src="../script/funciona.js"></script>
+    <script src="../script/injs.js"></script>
 </body>
 </html>
