--- a/Pagis/contato.html
+++ b/Pagis/contato.html
@@ -1,10 +1,10 @@
 <html>
 <head lang="pt-br/en">
     <title>Contato</title>
-    <link rel="stylesheet" href="Css/cont.css">
-    <link rel="stylesheet" href="Css/scrollbarEfect.css">
-    <link rel="stylesheet" href="Css/geral.css">
-    <link rel="icon" type="image/png" href="images/LogoProject.png">
+    <link rel="stylesheet" href="../Css/cont.css">
+    <link rel="stylesheet" href="../Csss/crollbarEfect.css">
+    <link rel="stylesheet" href="../Css/geral.css">
+    <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,15 +12,15 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 class="titulo">O Circo da Meia Noite</h1>
         </a>
         <button class="menu" id="btnMenu">☰</button>
     </header>
     <nav class="sidebar" id="sidebar">
         <ul>
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="sobre.html">sobre</a></li>
+            <li><a href="../index.html">inicio</a></li>
+            <li><a href="Pagis/sobre.html">sobre</a></li>
             <li><a href='#'>contato</a></li>
         </ul>
     </nav>
@@ -62,22 +62,22 @@
     <div class="conttaos">
         <div class="iconsR">
             <a href="https://x.com/Matheus03932899">
-                <img src="images/twitter.png"/>
+                <img src="../images/twitter.png"/>
             </a>
         </div>
         <div class="iconsR">
             <a href="https://www.facebook.com/matheus.ricci.311?locale=pt_BR">
-                <img src="images/facebook.png"/>
+                <img src="../images/facebook.png"/>
             </a>
         </div>
         <div class="iconsR">
             <a href="https://github.com/RiccGD">
-                <img src="images/github.png"/>
+                <img src="../images/github.png"/>
             </a>
         </div>
         <div class="iconsR">
             <a href="https://www.instagram.com/silvamatheusricci/">
-                <img src="images/instagram.png"/>
+                <img src="../images/instagram.png"/>
             </a>
         </div>
     </div>
@@ -85,7 +85,7 @@
 
 
     <footer>Todos os Direitos São Reservados -2025- Matheus Ricci</footer>
-    <script src="script/funciona.js"></script>
-    <script src="script/FormsRes.js"></script>
+    <script src="../script/funciona.js"></script>
+    <script src="../script/FormsRes.js"></script>
 </body>
 </html>
