--- a/Pagis/coresChuva.html
+++ b/Pagis/coresChuva.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/LogoProject.png">
+    <link rel="icon" type="image/png" href="../images/LogoProject.png">
     <title>ChuvaCores</title>
-    <link rel="stylesheet" href="Css/coresstorm.css">
-    <link rel="stylesheet" href="Css/geral.css">
+    <link rel="stylesheet" href="../Css/coresstorm.css">
+    <link rel="stylesheet" href="../Css/geral.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,16 +14,16 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 class="titulo">Tempestade de Cores</h1>
         </a>
         <button class="menu" id="btnMenu">☰</button>
     </header>
     <nav class="sidebar" id="sidebar">
         <ul>
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="sobre.html">sobre</a></li>
-            <li><a href="contato.html">contato</a></li>
+            <li><a href="../index.html">inicio</a></li>
+            <li><a href="Pagis/sobre.html">sobre</a></li>
+            <li><a href="Pagis/contato.html">contato</a></li>
         </ul>
     </nav>
 
@@ -48,7 +48,7 @@
 
     <footer>Todos os Direitos São Reservados -2025- Matheus Ricci</footer>
 
-    <script src="script/funciona.js"></script>
-    <script src="script/coresC.js"></script>
+    <script src="../script/funciona.js"></script>
+    <script src="../script/coresC.js"></script>
 </body>
 </html>
