--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 class="titulo">O Circo da Meia Noite</h1>
         </a>
         <button class="menu" id="btnMenu">☰</button>
@@ -20,8 +20,8 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="#">inicio</a></li>
-            <li><a href="sobre.html">sobre</a></li>
-            <li><a href="contato.html">contato</a></li>
+            <li><a href="Pagis/sobre.html">sobre</a></li>
+            <li><a href="Pagis/contato.html">contato</a></li>
         </ul>
     </nav>
 
