--- a/Pagis/MouseC.html
+++ b/Pagis/MouseC.html
@@ -1,8 +1,8 @@
 <html>
 <head lang="pt-br/en">
     <title>Cusor Brilhante</title>
-    <link rel="stylesheet" href="../CssMoseBril.css">
-    <link rel="stylesheet" href="../CssscrollbarEfect.css">
+    <link rel="stylesheet" href="../Css/MoseBril.css">
+    <link rel="stylesheet" href="../Css/scrollbarEfect.css">
     <link rel="stylesheet" href="../Css/geral.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
@@ -28,7 +28,6 @@
 
     <section class="brilhao">
         <span></span><span></span>
-     <span></span><span></span>
      <span></span><span></span>
      <span></span><span></span>
      <span></span><span></span>
