--- a/Pagis/sobre.html
+++ b/Pagis/sobre.html
@@ -6,7 +6,7 @@
     <title>Sobre</title>
     <link rel="stylesheet" href="../Css/emua.css">
     <link rel="stylesheet" href="../Css/geral.css">
-    <link rel="stylesheet" href="../CssscrollbarEfect.css">
+    <link rel="stylesheet" href="../Csss/crollbarEfect.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
