--- a/Pagis/contato.html
+++ b/Pagis/contato.html
@@ -2,7 +2,7 @@
 <head lang="pt-br/en">
     <title>Contato</title>
     <link rel="stylesheet" href="../Css/cont.css">
-    <link rel="stylesheet" href="../Csss/crollbarEfect.css">
+    <link rel="stylesheet" href="../Css/crollbarEfect.css">
     <link rel="stylesheet" href="../Css/geral.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
