--- a/Pagis/sobre.html
+++ b/Pagis/sobre.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="../Css/emua.css">
+    <link rel="stylesheet" href="../Css/crollbarEfect.css">
     <link rel="stylesheet" href="../Css/geral.css">
-    <link rel="stylesheet" href="../Csss/crollbarEfect.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
