Cubo,sobre e contato correção em links

--- a/Pagis/Cubo.html
+++ b/Pagis/Cubo.html
@@ -1,9 +1,9 @@
 <html>
 <head lang="pt-br/en">
     <title>O Cubo</title>
-    <link rel="stylesheet" href="../CssCubos.css">
-    <link rel="stylesheet" href="../CssscrollbarEfect.css">
-    <link rel="stylesheet" href="../../Cssgeral.css">
+    <link rel="stylesheet" href="../Css/Cubos.css">
+    <link rel="stylesheet" href="../Css/scrollbarEfect.css">
+    <link rel="stylesheet" href="../Css/geral.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="../index.html">inicio</a></li>
-            <li><a href="Pagis/sobre.html">sobre</a></li>
-            <li><a href="Pagis/contato.html">contato</a></li>
+            <li><a href="sobre.html">sobre</a></li>
+            <li><a href="contato.html">contato</a></li>
         </ul>
     </nav>
 
