--- a/Pagis/contato.html
+++ b/Pagis/contato.html
@@ -2,7 +2,7 @@
 <head lang="pt-br/en">
     <title>Contato</title>
     <link rel="stylesheet" href="../Css/cont.css">
-    <link rel="stylesheet" href="../Css/crollbarEfect.css">
+    <link rel="stylesheet" href="../Css/scrollbarEfect.css">
     <link rel="stylesheet" href="../Css/geral.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png">
     
@@ -20,7 +20,7 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="../index.html">inicio</a></li>
-            <li><a href="Pagis/sobre.html">sobre</a></li>
+            <li><a href="sobre.html">sobre</a></li>
             <li><a href='#'>contato</a></li>
         </ul>
     </nav>
