--- a/Pagis/sobre.html
+++ b/Pagis/sobre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="../Css/emua.css">
-    <link rel="stylesheet" href="../Css/crollbarEfect.css">
+    <link rel="stylesheet" href="../Css/scrollbarEfect.css">
     <link rel="stylesheet" href="../Css/geral.css">
     <link rel="icon" type="image/png" href="../images/LogoProject.png"> 
 
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="../index.html">inicio</a></li>
             <li><a href=#>sobre</a></li>
-            <li><a href="Pagis/contato.html">contato</a></li>
+            <li><a href="contato.html">contato</a></li>
         </ul>
         
     </nav>
